# sprouts-coupons

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  REPORT.txt  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: build_tests.yml
src/sprouts-coupons/utils/: testing.py  wandb_step_logger.py
src/sprouts_coupons/: __init__.py  client.py  email.py  example_clip_call.txt  main.py  models.py  resources.py  run_build_unit_tests.py  session.py  test_client.py  test_integration.py
src/sprouts_coupons/utils/: general.py  test_general.py  wandb_step_logger.py
